Trying to resolve alignment issue

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -723,6 +723,20 @@ footer {
 }
 
 /*
+Testimonials styles
+*/
+
+#testimonials {
+    padding: 50px 15px;
+    text-align: center;
+    border-bottom: 1px solid $border;
+
+    h2 {
+        color: $heading;
+    }
+}
+
+/*
     -------------------------------
     ----- 10. Contact Styles -----
     -------------------------------
